#17 Add while/doWhile loops

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <script src="fibonacciWithBiggestNumber/script.js"></script>
+    <script src="fibonacciWhileLoop/script.js"></script>
     <script src="fibonacciWithLength/script.js"></script>
-    <script type="export" src="fibonacciWithRecursion/script.js"></script>
-    <script type="import" src="script-ranner.js"></script>
+    <script src="fibonacciWithRecursion/script.js"></script>
+    <script src="script-ranner.js"></script>
 </body>
 </html>
